src/views/assets/css/style.css
html {
  box-sizing: border-box;
  height: 100%;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  font-family: "Comfortaa";
  background-color: #f0efff;
  transition: background 0.2s ease;
}

body * {
  color: #3e4c5a;
}

body.dark {
  background-color: #17222c;
}
body.dark * {
  color: #aeafb0;
}
/* =====The Layout===== */
.container {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  height: 100vh;
}

header {
  width: 80%;
  min-height: 3em;
  margin: 0 auto;
  flex: 3;
  display: flex;
}
header .text {
  margin: auto;
  flex: 7;
}
header .theme {
  margin: auto;
  flex: 1;
}

.panel {
  flex: 20;
  display: flex;
  flex-direction: column;
  border-radius: 5vw;
  padding: 5vw;
  margin: 0 5vw;
  box-shadow: inset 8px 8px 8px #c0bfcc, inset -8px -8px 8px #ffffff;
  justify-content: center;
  transition: box-shadow 0.2s ease;
}

body.dark .panel {
  box-shadow: inset 8px 8px 8px #121b23, inset -8px -8px 8px #1c2935;
}
/* ====Ordering==== */
.panel .control {
  order: 1;
  flex: 1;
  display: flex;
  flex-direction: column;
}
.panel .dial {
  height: 100%;
  display: flex;
  order: 0;
  flex: 1;
}

.panel .dial .brightness {
  margin: auto;
  position: relative;
  width: 30vw;
  height: 30vw;
  max-width: 12rem;
  max-height: 12rem;
  min-width: 100px;
  min-height: 100px;
  border-radius: 50%;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: linear-gradient(145deg, #d8d7e6, #ffffff);
  box-shadow: 5px 5px 10px #c2c2cf, -5px -5px 10px #ffffff;
}

body.dark .panel .dial .brightness {
  background: linear-gradient(145deg, #151f28, #19242f);
  box-shadow: 10px 10px 20px #121b23, -10px -10px 20px #1c2935;
}
.panel .dial .brightness #brightness {
  font-family: "Poppins";
  font-size: 2rem;
  color: #3e4c5a;
  display: block;
  margin: auto;
  padding-top: 0.15em;
}
body.dark .panel .dial .brightness #brightness {
  color: #aeafb0;
}
/* ===== Control panel grid =====*/
.panel .control .toggle {
  flex: 1;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 4fr 1fr;
  padding: 1em;
}
.panel .control .toggle > div,
.panel .control .toggle .switch-wrap {
  grid-row-start: 2;
  margin: auto;
}
.panel .control .toggle .switch-wrap {
  margin-left: 0;
}

.panel .control .slider {
  flex: 1;
  margin: 0;
  padding: 1em;
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: 1fr 4fr;
}

.panel .control .slider > div {
  grid-column-start: 1;
  margin: auto;
}
.panel .control .slider #slider {
  grid-column-end: -1;
  width: 80%;
}

footer {
  flex: 1;
  text-align: center;
}
footer * {
  color: #6f7275 !important;
}

/* =====Button Styling===== */
.switch-wrap {
  text-align: center;
  margin: auto;
  position: relative;
  display: block;
  cursor: pointer;
  width: 4rem;
  height: 2rem;
  border-radius: 30rem;
  box-shadow: inset 5px 5px 7px #b5b5b5, inset -5px -5px 7px #ffffff;
}
body.dark .switch-wrap {
  box-shadow: inset 6px 6px 3px #131c24, inset -6px -6px 3px #1b2834;
}
.toggle .switch-wrap::before {
  content: "ON OFF";
  font-size: 70%;
  width: 4rem;
  height: 1rem;
  transform: translate(-1.98rem, 0.7rem);
  position: absolute;
  z-index: -1;
}
.switch-wrap input {
  position: absolute;
  opacity: 0;
  width: 0;
  height: 0;
}
.switch {
  height: 100%;
  display: grid;
  grid-template-columns: 0fr 1fr 1fr;
  transition: all 100ms linear;
}

input:checked + .switch {
  grid-template-columns: 1fr 1fr 0fr;
}

.switch::after {
  content: "";
  border-radius: 50%;
  grid-column: 2;
  transition: background 0.2s;
  box-shadow: 5px 5px 11px #989898, -5px -5px 11px #ffffff;
}
body.dark .switch::after {
  box-shadow: 5px 5px 10px #141d26, -5px -5px 10px #1a2732;
}

header .switch::after {
  background-color: #1c2a36;
  background-image: url("/feather-moon.svg");
  background-size: 60%;
  background-repeat: no-repeat;
  background-position: center;
}

header input:checked + .switch::after {
  background-color: #f0efff;
  background-image: url("/feather-sun.svg");
}

.toggle .switch::after {
  background: linear-gradient(145deg, #ffffff, #d8d7e6);
  background-size: 60px;
  background-repeat: no-repeat;
  background-position: center;
}
body.dark .toggle .switch::after {
  background: linear-gradient(145deg, #151f28, #19242f);
}

/* =====Slider Styling===== */
#slider {
  -webkit-appearance: none;
  height: 2.5em;
  min-width: 6em; /*for usability*/
  background: #f0efff;
  border-radius: 1.25em;
  outline: none;
  opacity: 0.7;
  transition: opacity 0.2s;
  box-shadow: inset 5px 5px 8px #bcbcbc, inset -5px -5px 8px #ffffff;
}
body.dark #slider {
  background: #17222c;
  box-shadow: inset 5px 5px 9px #0e141a, inset -5px -5px 9px #20303e;
}

#slider:hover {
  opacity: 1;
}

#slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 2.2em;
  height: 2.2em;
  background: #f0efff;
  cursor: pointer;
  border: 0;
  border-radius: 50%;
  background: linear-gradient(145deg, #ffffff, #d8d7e6);
  box-shadow: 5px 5px 14px #b6b6c2, -5px -5px 14px #ffffff;
}

#slider::-moz-range-thumb {
  width: 2.2em;
  height: 2.2em;
  background: #f0efff;
  cursor: pointer;
  border: 0;
  border-radius: 50%;
  background: linear-gradient(145deg, #ffffff, #d8d7e6);
  box-shadow: 5px 5px 14px #b6b6c2, -5px -5px 14px #ffffff;
}

body.dark #slider::-webkit-slider-thumb {
  background: linear-gradient(145deg, #151f28, #19242f);
  box-shadow: 4px 4px 6px #121a22, -4px -4px 6px #1c2a36;
}
body.dark #slider::-moz-range-thumb {
  background: linear-gradient(145deg, #151f28, #19242f);
  box-shadow: 4px 4px 6px #121a22, -4px -4px 6px #1c2a36;
}

/* =====Responsiveness===== */
@media only screen and (min-width: 560px) {
  .panel {
    flex-direction: row;
  }
  .panel .dial {
    order: 2;
  }
  .panel .control .toggle {
    grid-template-rows: 1fr;
  }
}

